# contraption

./: .gitmodules  CMakeLists.txt  EPAViewerWidget.cpp  EPAViewerWidget.h  EPAViewerWidget.ui  FileSelector.cpp  FileSelector.h  INSTALL  LargeAli.cpp  LargeAli.h  LargeAli.ui  PKGBUILD  PaparaMainWidget.cpp  PaparaMainWidget.h  PaparaMainWidget.ui  PhyloTreeView.cpp  PhyloTreeView.h  TextGrid.cpp  TextGrid.h  build_extern.sh  build_versions.h  deploy_mac.txt  dialog.cpp  dialog.h  dialog.ui  epa_viewer_main.cpp  epa_viewer_widget.ui  largali_main.cpp  large_ali.cpp  large_ali.h  large_ali.ui  main.cpp  main.h  main_widget.cpp  main_widget.h  main_widget.ui  ro_submodules.sh
deploy/: deploy.sh
